--- a/buttons.html
+++ b/buttons.html
@@ -1,16 +1,28 @@
-<link rel="stylesheet" href="button.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="button.css">
+    <title>Document</title>
+</head>
+<body>
+    <button class="Request-now">Request now</button>
+    <button class="add-to-cart">Add to cart</button>
+    <button class="Sign-up">Sign Up</button>
+    <br>
 
-<button class="Request-now">Request now</button>
-<button class="add-to-cart">Add to cart</button>
-<button class="Sign-up">Sign Up</button>
-<br>
+    <div class="bord">
+        <button class="get-started">Get started</button>
+        <button class="download">Download</button>
+    </div><br>
 
-<div class="bord">
-    <button class="get-started">Get started</button>
-    <button class="download">Download</button>
-</div><br>
+    <div class="linkedin">
+        <button class="apply">Apply on company's website</button>
+        <button class="save">Save</button>
+    </div>
+</body>
+</html>
 
-<div class="linkedin">
-    <button class="apply">Apply on company's website</button>
-    <button class="save">Save</button>
-</div>
+
