--- a/text.html
+++ b/text.html
@@ -1,7 +1,19 @@
-<link rel="stylesheet" href="button.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="button.css">
+    <title>Document</title>
+</head>
+<body>
+    <p class="title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+    <p class="stats">3.4M views &#183; 6months ago</p>
+    <p class="user">Marques Browniee &#10004;</p>
+    <p class="long-text">Talking tech and AI on the heels of Google I/O. Also a daily drive phone reveal from Google's CEO. Shoutout to Sundar!</p>
+    <p class="footer">Shop early for the best selection of holiday favourites. <span class="span">Shop now</span></p>
+</body>
+</html>
 
-<p class="title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-<p class="stats">3.4M views &#183; 6months ago</p>
-<p class="user">Marques Browniee &#10004;</p>
-<p class="long-text">Talking tech and AI on the heels of Google I/O. Also a daily drive phone reveal from Google's CEO. Shoutout to Sundar!</p>
-<p class="footer">Shop early for the best selection of holiday favourites. <span class="span">Shop now</span></p>
+
