--- a/texttutoria.html
+++ b/texttutoria.html
@@ -1,19 +1,31 @@
-<link rel="stylesheet" href="button.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="button.css">
+    <title>Document</title>
+</head>
+<body>
+    <p class="tahoma">This is Tahoma Font</p>
+    <div class="deal">
+        <p class="year">Biggest deal of the year!</p>
+        <p class="end">Sales end Tuesday</p>
+    </div>
+    <div class="course">
+        <p class="heading">HTML CSS Course</p>
+        <p class="sub-heading">Beginner to Pro</p>
+        <p class="details">In this course, we'll learn the skills you need to become a developer.</p>
+        <button class="course-get-started">Get Started</button>
+    </div>
 
-<p class="tahoma">This is Tahoma Font</p>
-<div class="deal">
-    <p class="year">Biggest deal of the year!</p>
-    <p class="end">Sales end Tuesday</p>
-</div>
-<div class="course">
-    <p class="heading">HTML CSS Course</p>
-    <p class="sub-heading">Beginner to Pro</p>
-    <p class="details">In this course, we'll learn the skills you need to become a developer.</p>
-    <button class="course-get-started">Get Started</button>
-</div>
+    <div class="task5">
+        <p class="shopping">Shopping for Business</p>
+        <p class="help">See how Apple at work can Help.</p>
+        <a class="link" href="https://apple.com" target="-blank">Learn more &gt;</a>
+    </div>
+</body>
+</html>
 
-<div class="task5">
-    <p class="shopping">Shopping for Business</p>
-    <p class="help">See how Apple at work can Help.</p>
-    <a class="link" href="https://apple.com" target="-blank">Learn more &gt;</a>
-</div>
+
