--- a/website.html
+++ b/website.html
@@ -1,21 +1,33 @@
-<link rel="stylesheet" href="button.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="button.css">
+    <title>Document</title>
+</head>
+<body>
+    <button>click</button>
+    <div>
+        <button>Segun</button>
+        <button>Chocolate</button>
+    </div>
+    <p class="heading">Hello, World!</p>
+    <p>Today i went to the grocery store to buy some eggs and vegetables</p>
+    <a href="https://www.google.com" target="-blank">link to google</a>
+
+    <
+        <a href="https://www.amazon.com" target="-blank">Back to amazon</a>
+        <p class="shoe">Nike Black Running Shoes</p>
+        <p class="stock">$39 - in stock</p>
+        <p>Free delivery tomorrow.</p>
+    <div>
+        <button class="cart">Add to Cart</button>
+        <button class="buy">Buy now</button>
+    </div>
+</body>
+</html>
 
 
-<button>click</button>
-<div>
-    <button>Segun</button>
-    <button>Chocolate</button>
-</div>
-<p class="heading">Hello, World!</p>
-<p>Today i went to the grocery store to buy some eggs and vegetables</p>
-<a href="https://www.google.com" target="-blank">link to google</a>
 
-<
-<a href="https://www.amazon.com" target="-blank">Back to amazon</a>
-<p class="shoe">Nike Black Running Shoes</p>
-<p class="stock">$39 - in stock</p>
-<p>Free delivery tomorrow.</p>
-<div>
-    <button class="cart">Add to Cart</button>
-    <button class="buy">Buy now</button>
-</div>
